[gd_scene load_steps=9 format=3 uid="uid://bh7ryb0mb3rh0"]

[ext_resource type="Script" uid="uid://cxalnlsqejr3s" path="res://scenes/player/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://dyb8c676sbs5v" path="res://sprites/magev1.png" id="2_g2els"]
[ext_resource type="PackedScene" uid="uid://c5xeltgbeoosb" path="res://shaders/sprite_flasher.tscn" id="3_qhqgy"]
[ext_resource type="PackedScene" uid="uid://bq4ea0g35b1gs" path="res://scenes/player/player_stats.tscn" id="4_lvxji"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dqkch"]
radius = 5.5
height = 25.0

[sub_resource type="Animation" id="Animation_qhqgy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_g2els"]
resource_name = "player_move_animation"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.174533, 0.0, -0.174533, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dqkch"]
_data = {
&"RESET": SubResource("Animation_qhqgy"),
&"player_move_animation": SubResource("Animation_g2els")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_g2els")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.67, 1.67)
texture = ExtResource("2_g2els")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_dqkch")
metadata/_edit_lock_ = true

[node name="QActionTimer" type="Timer" parent="."]
one_shot = true

[node name="WActionTimer" type="Timer" parent="."]
one_shot = true

[node name="EActionTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="RActionTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dqkch")
}
speed_scale = 2.0

[node name="SpriteFlasher" parent="." instance=ExtResource("3_qhqgy")]

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PlayerStats" parent="." instance=ExtResource("4_lvxji")]
health_points = 20
max_health_points = 20
damage_multiplier = 1.0
intelligence = 100

[connection signal="timeout" from="EActionTimer" to="." method="_on_e_action_timer_timeout"]
